--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -139,6 +139,14 @@
     z-index: -100;
 }
 
+#HomeMenu{
+  z-index: 99999;
+  position:fixed;
+  top:0;
+  width:100%;
+  height:auto;
+  opacity: 0;
+}
 
 /***************Group File*****************/
 .HomeGroupFileBox{
@@ -195,7 +203,10 @@
 
 #LogoutButton{
   position:absolute;
-  top:70%;
+  top:120%;
   left:45%;
   transition:translateY(-50%);
+}
+#HomeContainer{
+  padding-bottom: 50px;
 }
